[ft  #163518689] adding changes from develop
[Feature #163518689] fix rebase conflicts

[ft #[163518690]] create unittest for rating

[ft #[163518690] fix issue with page not found middleware in index.js

[ft #[163518690]] fix all test for rating endpoint

[ft #[163518690]  update  the documentation

[ft  #[163518690]] remove console.log

[ft #[163518690]] fix issue that cause the test to fail

[ft #[163518690]] adding a before and after for the whole test suite

[ft #[163518690]] adding an after for the whole suite

[ft #[163518690]] fix eslint errors

[story-type #[pivotal-tracker-id]] Description of task that has been implemented.

[ft  #[163518690]] create slug for migration

[ft #[163518690]] fixing failing test

[ft  #[163518690]] Fix all tests

[ft  #[163518690]] adding average rating when returning all ratings

[ft #[163518690]] adding jsdoc comment

[ft #[163518690]] adding status code from helpers

[ft #[163518690]] rebase develop branch

[ft #[163518690]] update the documentation

[ft #[163518690]] change JWT_KEY to SECRET

[ft #[163518690]] fix mirror issue of formatting

[ft #[163518690]]  changing article to slug

[ft  #[163518690]] update the documenttaion for passeport

[ft  #[163518690]] update swagger.json

[ft #[163518690)]] refractor code to use slug instead of id

[ft #[163518690]] refractor tests

[ft  #[163518690]] fix eslint errors

[ft  #[163518690]] update the documentation

[ft #[163518690 ]] add console.log to debug

[ft #[163518690]] fixing issue causing build failed on travis

[ft #[163518690]] remove only on rating test

[ft #[163518690]] fix issue on edit a rating for an article

[ft #[163518690]] remove for the test

[ft #[163518690]] fiing houndci problem
